--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ name: CI
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -38,6 +38,6 @@ jobs:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTED_ID }}
         with:
           debug: true
-          prefix: github.com/sillygod/cdp-cache # this is important
+          prefix: github.com/jgebang/object-commander # this is important
           coverageCommand: go test -coverprofile=c.out ./...
           coverageLocations: ${{ github.workspace }}/c.out:gocov
