--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -4,7 +4,7 @@ name: PR-CI
 # events but only for the master branch
 on:
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -38,6 +38,6 @@ jobs:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTED_ID }}
         with:
           debug: true
-          prefix: github.com/sillygod/cdp-cache
+          prefix: github.com/jgebang/object-commander
           coverageCommand: go test -coverprofile=c.out ./...
           coverageLocations: ${{ github.workspace }}/c.out:gocov
